<resources>
    <string name="app_name">Z Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_icon">Contact icon</string>
    <string name="first_name">first name</string>
    <string name="last_name_optional">last name ( optional )</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id_optional">Email Id ( optional )</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="phone_number_code">Code</string>
    <string name="_91">+91</string>
    <string name="contact_image">contact Image</string>
    <string name="mobile">Mobile</string>
    <string name="mail">Mail</string>
    <string name="call_action_image">Call Action Image</string>
    <string name="mail_action_image">Mail Action Image</string>
    <string name="edit_action_image">Edit Action Image</string>
    <string name="delete_action_image">Delete Action Image</string>
    <string name="share_action_image">Share Action Image</string>
    <string name="abut_us">You can organize the people and businesses in Contacts using labels. You can use the Contacts app to find someone\'s contact info or organize contacts with labels like \"friends\" or \"family.\" Android Computer. More.</string>
    <string name="about">About</string>
</resources>