<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.zcontacts.addcontact.AddContactViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".addcontact.AddContactFragment">


            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contact_icon"
                android:scaleType="fitCenter"
                app:bindImg="@{viewModel.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_perm_contact_calendar_24" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:bindText="@{viewModel.selectedData.contactFirstName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/last_name_optional"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:bindText="@{viewModel.selectedData.contactLastName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstName" />

            <EditText
                android:id="@+id/countryCode"
                android:layout_width="133dp"
                android:layout_height="47dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_number_code"
                android:inputType="number|phone"
                android:text="@string/_91"
                app:bindText="@{viewModel.selectedData.contactCountryCode}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="number|phone"
                android:shadowRadius="10"
                app:bindNumber="@{viewModel.selectedData.contactNumber}"
                app:layout_constraintBaseline_toBaselineOf="@+id/countryCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toEndOf="@+id/countryCode" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/email_id_optional"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:bindText="@{viewModel.selectedData.contactMail}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/add"
                app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>